Generalisation + new expt

--- a/Code/trying-custom-kernel.ipynb
+++ b/Code/trying-custom-kernel.ipynb
@@ -1473,9 +1473,9 @@
     }
    ],
    "source": [
-    "from scripts.train import train_classifier\n",
+    "from scripts.train import train_model\n",
     "\n",
-    "history = train_classifier(\n",
+    "history = train_model(\n",
     "    model=model,\n",
     "    train_dataloader=train_dataloader,\n",
     "    val_dataloader=val_dataloader,\n",
