Add nn model for parities expt

--- a/Code/learning-parities.ipynb
+++ b/Code/learning-parities.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,20 +81,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 2,  1, 12, 10,  5,  9, 15, 13, 14, 11, 19])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from numpy.random import choice\n",
     "\n",
@@ -104,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,20 +141,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([2000, 20])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "X = torch.cat([generate_data_1().reshape(1, -1) if function_choices[i] == 0 else generate_data_2(A).reshape(1, -1) for i in range(NUM_SAMPLES)])\n",
     "X.shape"
@@ -173,20 +151,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([2000, 1])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Y = torch.cat([get_y_from_data(x, A).reshape(1, -1) for x in X])\n",
     "Y.shape"
@@ -194,29 +161,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(torch.Size([1200, 20]),\n",
-       " torch.Size([1200, 1]),\n",
-       " torch.Size([400, 20]),\n",
-       " torch.Size([400, 1]),\n",
-       " torch.Size([400, 20]),\n",
-       " torch.Size([400, 1]))"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "X_training, X_test, Y_training, Y_test = train_test_split(X, Y, test_size=0.2)\n",
     "X_train, X_val, Y_train, Y_val = train_test_split(X_training, Y_training, test_size=0.25)\n",
     "X_train.shape, Y_train.shape, X_val.shape, Y_val.shape, X_test.shape, Y_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scripts.utils import make_dataloader\n",
+    "\n",
+    "train_dataloader, val_dataloader = make_dataloader(X_train, Y_train, batch_size=32, shuffle=True), make_dataloader(X_val, Y_val, batch_size=32, shuffle=True)"
    ]
   },
   {
@@ -237,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,8 +212,154 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Maybe it's finally time to make a models script and migrate SimpleNN code there"
+    "from scripts.models import SimpleNN\n",
+    "from scripts.metrics import BinaryAccuracy\n",
+    "from scripts.train import train_model\n",
+    "from scripts.utils import EarlyStopping"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "depths = [1, 2, 3, 4, 5]\n",
+    "widths = [16, 32, 64]\n",
+    "weight_decays = torch.logspace(-3, 3, 7)\n",
+    "etas = [1e-4, 1e-3, 1e-2]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_score = 0.0\n",
+    "best_depth = None\n",
+    "best_width = None\n",
+    "best_weight_decay = None\n",
+    "best_eta = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_count = len(depths) * len(widths) * len(weight_decays) * len(etas)\n",
+    "count = 0\n",
+    "EPOCHS = 50\n",
+    "\n",
+    "print(f'Cross-validating across {total_count} models.\\n')\n",
+    "\n",
+    "for depth in depths:\n",
+    "    for width in widths:\n",
+    "        for weight_decay in weight_decays:\n",
+    "            for eta in etas:\n",
+    "                count += 1\n",
+    "                model = SimpleNN(input_size=N, hidden_layers=depth, hidden_units=width).to(device)\n",
+    "                loss_fn = torch.nn.BCELoss()\n",
+    "                optimizer = torch.optim.Adam(params=model.parameters(), lr=eta, weight_decay=weight_decay)\n",
+    "                metric = BinaryAccuracy()\n",
+    "\n",
+    "                history = train_model(\n",
+    "                    model=model,\n",
+    "                    train_dataloader=train_dataloader,\n",
+    "                    val_dataloader=val_dataloader,\n",
+    "                    loss_fn=loss_fn,\n",
+    "                    optimizer=optimizer,\n",
+    "                    metric=metric,\n",
+    "                    epochs=50,\n",
+    "                    verbose=0,\n",
+    "                    device=device\n",
+    "                )\n",
+    "                curr_score = history['val_score'][-1]\n",
+    "\n",
+    "                print(f'[{count}/{total_count}] depth={depth}, width={width}, lambda={weight_decay:.5f}, eta={eta} ===> validation score={curr_score:.6f}')\n",
+    "                if curr_score > best_score:\n",
+    "                    best_score = curr_score\n",
+    "                    best_depth = depth\n",
+    "                    best_width = width\n",
+    "                    best_weight_decay = weight_decay\n",
+    "                    best_eta = eta\n",
+    "\n",
+    "print(f'Validation complete. Best validation score after {EPOCHS} epochs = {best_score:.6f}')\n",
+    "print(f'Best configuration: depth={best_depth}, width={best_width}, lambda={best_weight_decay:.5f}, eta={best_eta}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_model_nn = SimpleNN(input_size=N, hidden_layers=best_depth, hidden_units=best_width).to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss_fn = torch.nn.BCELoss()\n",
+    "optimizer = torch.optim.Adam(params=best_model_nn.parameters(), lr=best_eta, weight_decay=best_weight_decay)\n",
+    "metric = BinaryAccuracy()\n",
+    "early_stopper = EarlyStopping(patience=20, min_delta=1e-4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "history = train_model(\n",
+    "    model=best_model_nn,\n",
+    "    train_dataloader=train_dataloader,\n",
+    "    val_dataloader=val_dataloader,\n",
+    "    loss_fn=loss_fn,\n",
+    "    optimizer=optimizer,\n",
+    "    metric=metric,\n",
+    "    epochs=500,\n",
+    "    early_stopping=early_stopper,\n",
+    "    device=device\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scripts.utils import plot_train_history\n",
+    "\n",
+    "plot_train_history(history)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scripts.test import predict\n",
+    "\n",
+    "preds_train, preds_val = predict(best_model_nn, X_train, device), predict(best_model_nn, X_val, device)\n",
+    "score_train, score_val = metric(preds_train, Y_train), metric(preds_val, Y_val)\n",
+    "score_train, score_val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
