Add flags to control execution using save/loads
Allow bypassing validation/train steps by the use of flags and
save files, saving best hyperparameter configurations and best
(trained) neural network, allowing continuing computation at a
later stage.

--- a/Code/orthants-single-empty.ipynb
+++ b/Code/orthants-single-empty.ipynb
@@ -14,10 +14,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "VALIDATE = True\n",
+    "VALIDATE_NN = True\n",
     "TRAIN = True\n",
+    "VALIDATE_SVM = True\n",
     "\n",
-    "# change code to use these flags and do the action otherwise load necessary stuff already saved"
+    "# change code to use these flags and do the action otherwise load necessary stuff already saved\n",
+    "# also update docstrings"
    ]
   },
   {
@@ -261,14 +263,15 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "if VALIDATE:\n",
+    "\n",
+    "if VALIDATE_NN:\n",
     "    best_depth = None\n",
     "    best_width = None\n",
     "    best_eta = None\n",
     "    best_weight_decay = None\n",
     "    best_score = -torch.inf\n",
     "else:\n",
-    "    with open('configs/orthants-single-empty.json', 'r') as f:\n",
+    "    with open('configs/nn/orthants-single-empty.json', 'r') as f:\n",
     "        best_config = json.load(f)\n",
     "    best_depth = best_config['depth']\n",
     "    best_width = best_config['width']\n",
@@ -289,7 +292,7 @@
     "curr_count = 0\n",
     "EPOCHS = 10\n",
     "\n",
-    "if VALIDATE:\n",
+    "if VALIDATE_NN:\n",
     "    print(f'Cross-validating across {total_count} models.\\n')\n",
     "\n",
     "    for depth in depths:\n",
@@ -328,7 +331,7 @@
     "        'eta': best_eta,\n",
     "        'weight_decay': best_weight_decay\n",
     "    }\n",
-    "    with open('configs/orthants-single-empty.json', 'w') as f:\n",
+    "    with open('configs/nn/orthants-single-empty.json', 'w') as f:\n",
     "        json.dump(best_config, f)\n",
     "\n",
     "print(f'\\nBest validation score after {EPOCHS} epochs: {best_score:.6f}')\n",
@@ -495,18 +498,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_cv_ntk = GridSearchCV(\n",
-    "    estimator=model_base_ntk,\n",
-    "    param_grid=params_ntk,\n",
-    "    scoring=scorer,\n",
-    "    n_jobs=5,\n",
-    "    refit=False,\n",
-    "    verbose=3\n",
-    ")\n",
-    "model_cv_ntk.fit(X_train, Y_train.squeeze())\n",
-    "best_params_ntk = model_cv_ntk.best_params_\n",
-    "best_score_ntk = max(model_cv_ntk.cv_results_['mean_test_score'])\n",
-    "best_params_ntk, best_score_ntk"
+    "if VALIDATE_SVM:\n",
+    "    model_cv_ntk = GridSearchCV(\n",
+    "        estimator=model_base_ntk,\n",
+    "        param_grid=params_ntk,\n",
+    "        scoring=scorer,\n",
+    "        n_jobs=5,\n",
+    "        refit=False,\n",
+    "        verbose=3\n",
+    "    )\n",
+    "    model_cv_ntk.fit(X_train, Y_train.squeeze())\n",
+    "    best_params_ntk = model_cv_ntk.best_params_\n",
+    "    best_score_ntk = max(model_cv_ntk.cv_results_['mean_test_score'])\n",
+    "    best_params_ntk, best_score_ntk"
    ]
   },
   {
@@ -515,18 +519,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_cv_rbf = GridSearchCV(\n",
-    "    estimator=model_base_rbf,\n",
-    "    param_grid=params_rbf,\n",
-    "    scoring=scorer,\n",
-    "    n_jobs=5,\n",
-    "    refit=False,\n",
-    "    verbose=3\n",
-    ")\n",
-    "model_cv_rbf.fit(X_train, Y_train.squeeze())\n",
-    "best_params_rbf = model_cv_rbf.best_params_\n",
-    "best_score_rbf = max(model_cv_rbf.cv_results_['mean_test_score'])\n",
-    "best_params_rbf, best_score_rbf"
+    "if VALIDATE_SVM:\n",
+    "    model_cv_rbf = GridSearchCV(\n",
+    "        estimator=model_base_rbf,\n",
+    "        param_grid=params_rbf,\n",
+    "        scoring=scorer,\n",
+    "        n_jobs=5,\n",
+    "        refit=False,\n",
+    "        verbose=3\n",
+    "    )\n",
+    "    model_cv_rbf.fit(X_train, Y_train.squeeze())\n",
+    "    best_params_rbf = model_cv_rbf.best_params_\n",
+    "    best_score_rbf = max(model_cv_rbf.cv_results_['mean_test_score'])\n",
+    "    best_params_rbf, best_score_rbf"
    ]
   },
   {
@@ -535,19 +540,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if best_score_rbf >= best_score_ntk:\n",
-    "    best_model_km = SVC(C=best_params_rbf['C'], kernel='rbf', gamma=best_params_rbf['gamma'])\n",
+    "import json\n",
+    "\n",
+    "if VALIDATE_SVM:\n",
+    "    if best_score_rbf >= best_score_ntk:\n",
+    "        best_model_km = SVC(C=best_params_rbf['C'], kernel='rbf', gamma=best_params_rbf['gamma'])\n",
+    "        best_config = {\n",
+    "            'kernel': 'rbf',\n",
+    "            'C': best_params_rbf['C'],\n",
+    "            'gamma': best_params_rbf['gamma']\n",
+    "        }\n",
+    "        with open('configs/svm/orthants-single-empty.json', 'w') as f:\n",
+    "            json.dump(best_config, f)\n",
+    "    else:\n",
+    "        best_model_km = SVC(C=best_params_ntk['C'], kernel=ntk)\n",
+    "        best_config = {\n",
+    "            'kernel': 'ntk',\n",
+    "            'C': best_params_ntk['C']\n",
+    "        }\n",
+    "        with open('configs/svm/orthants-single-empty.json', 'w') as f:\n",
+    "            json.dump(best_config, f)\n",
     "else:\n",
-    "    best_model_km = SVC(C=best_params_ntk['C'], kernel=ntk)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "best_model_km = SVC(C=1, kernel=ntk)"
+    "    with open('configs/svm/orthants-single-empty.json', 'r') as f:\n",
+    "        best_config = json.load(f)\n",
+    "    if best_config['kernel'] == 'rbf':\n",
+    "        best_model_km = SVC(C=best_config['C'], gamma=best_config['gamma'])\n",
+    "    else:\n",
+    "        best_model_km = SVC(kernel=ntk, C=best_config['C'])"
    ]
   },
   {
@@ -582,6 +601,15 @@
     "        Y_test[i].squeeze()\n",
     "    ) for i in range(128)\n",
     "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores_km.mean(), scores_km[ZERO_ORTHANT_INDEX].mean()"
    ]
   },
   {
